[project]
name = "default-project"
version = "0.1.1"
description = "This is a template repository"
authors = [
    {name = "zhangyupeng",email = "yupengzhang@sjtu.edu.cn"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
